# neurocog-db

./: .gitignore  404.html  LICENSE  README.md  index.html  interface_notes.txt  mkdocs.yml  notes.md  pyproject.toml  requirements.txt  search.html  sitemap.xml
docs/: index.md
docs/schema/: index.md  members.md  programs.md  projects.md
docs/setup/: install.md  useful-info.md
neurocogdb/: cli.py  test_ddb.py
neurocogdb/config/: config.yaml  paths.py  schema.yaml
neurocogdb/ddb/: gui.py  network.py  queries.py  test.py  test_data.py
neurocogdb/extract/: finder.py  parse.py
neurocogdb/gui/: app.py
neurocogdb/gui/assets/: cyto_style.py  styles.css
neurocogdb/gui/callbacks/: home_callbacks.py
neurocogdb/gui/components/: explore_filter.py  project_cards.py  project_filter.py
neurocogdb/gui/layouts/: explore.py  home.py  navbar.py  projects.py
neurocogdb/gui/pages/: explore.py  home.py  projects.py
neurocogdb/load/: ddb_loader.py  sync.py
neurocogdb/transform/: build.py  utils.py
neurocogdb/transform/base/: collaborators.py  data.py  funding.py  locations.py  members.py  outputs.py  programs.py  projects.py
neurocogdb/transform/linked/: program_collaborators.py  program_funding.py  program_members.py  project_data.py  project_locations.py  project_members.py  project_outputs.py  project_participants.py
schema/: index.html
schema/members/: index.html
schema/programs/: index.html
schema/projects/: index.html
search/: search_index.json
setup/install/: index.html
setup/useful-info/: index.html
