[project]
name = "neurocogdb"
version = "1.0.0"
description = "Database system for the Neurocognition and Mobility Lab"
authors = [{name="Abdullah Zafar", email="abdullah.zafar@umontreal.ca"}]
license = { text="MIT" }
requires-python = ">=3.8"
dependencies = [
    "PyYAML==6.0.2",
    "duckdb==1.3.2",
    "streamlit==1.49.1",
    "pandas==2.3.2",
]

[project.scripts]
neurocogdb = "neurocogdb.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"neurocogdb" = ["config/*.yaml", "*.ddb"]
