[project]
name = "neurocogdb"
version = "1.0.3"
description = "Database system for the Neurocognition and Mobility Lab"
authors = [{name="Abdullah Zafar", email="abdullah.zafar@umontreal.ca"}]
license = { text="MIT" }
requires-python = ">=3.8"
dependencies = [
    "dash==3.2.0",
    "dash-bootstrap-components==2.0.4",
    "dash_cytoscape==1.0.2",
    "duckdb==1.3.2",
    "pandas==2.3.2",
    "plotly==6.3.0",
    "PyYAML==6.0.2",
]

[project.scripts]
neurocogdb = "neurocogdb.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"neurocogdb" = ["config/*.yaml", "*.ddb"], "*.ddb"
